--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "bin": {
     "wof-participants": "cli.js"
   },
-  "main": "index.js",
+  "main": "dist/main.cjs.js",
+  "jsnext:main": "dist/main.es2015.js",
   "scripts": {
+    "postversion": "npm run build:es2015 & npm run build:main & npm run build:cli",
+    "build:es2015": "rollup -c",
+    "build:main": "NODE_ENV=main rollup -c",
+    "build:cli": "NODE_ENV=cli rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -30,5 +35,11 @@
   },
   "engines": {
     "node": ">=5.6.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015-rollup": "github:schubidu/babel-preset-es2015-rollup",
+    "rollup": "^0.25.4",
+    "rollup-plugin-babel": "^2.4.0",
+    "rollup-plugin-json": "^2.0.0"
   }
 }
